CR Changes: Simplified scaleBody method